--- a/sass/_portfolio.sass
+++ b/sass/_portfolio.sass
@@ -1,6 +1,6 @@
 .portfolio
   background-color: $light-bg-color
-  background:  url('../img/bg_slider.png') no-repeat  
+  background:  url('/img/bg_slider.png') no-repeat  
   //background-size: 60% 
   padding: 100px 0
 .slider
@@ -12,21 +12,20 @@
 .arrow 
   width: 45px
   height: 19px
-  //background-color: #000000
   position: absolute
   bottom: -68px
   &:hover
     cursor: pointer
   &_right 
     left: 50%
-    background: url('../img/left-arrow.png') no-repeat  center
+    background: url('../img/right_arrow.png') no-repeat  center
     background-size: 100%
     transform: translateX(15px )
   &_left
     left: 50%
     transform: translateX(-45px )
     margin-left: -15px
-    background: url('../img/left-arrow2.png') no-repeat  center
+    background: url('../img/left_arrow.png') no-repeat  center
     background-size: 100%
 .section   
   &-title
