--- a/css/style.css
+++ b/css/style.css
@@ -841,11 +841,14 @@ template {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .calculation-text {
+  max-width: 504px;
   padding-top: 90px;
-  padding-right: 200px;
 }
 
 .calculation-text__title {
@@ -893,14 +896,14 @@ template {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 32px;
-  height: 32px;
+  width: 35px;
+  height: 35px;
   border: 2px solid #000;
   border-radius: 50%;
 }
 
 .calculation-form {
-  max-width: 600px;
+  max-width: 370px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -909,7 +912,6 @@ template {
       -ms-flex-direction: column;
           flex-direction: column;
   margin-bottom: 50px;
-  padding-left: 20px;
 }
 
 .calculation-form__title {
@@ -947,14 +949,12 @@ template {
   width: 370px;
   height: 65px;
   margin-bottom: 15px;
-  margin-left: 20px;
 }
 
 .calculation__input-2 {
   width: 370px;
   height: 65px;
   margin-bottom: 30px;
-  margin-left: 20px;
 }
 
 .calculation__button {
@@ -964,7 +964,6 @@ template {
   height: 65px;
   font-size: 16px;
   margin-bottom: 33px;
-  margin-left: 20px;
   text-align: center;
 }
 
@@ -1018,7 +1017,7 @@ img {
   }
 }
 
-@media (max-width: 992px) {
+@media (max-width: 997px) {
   .container {
     width: 767px;
   }
@@ -1034,6 +1033,44 @@ img {
   }
   .slider {
     margin-right: -20px;
+  }
+  .calculation {
+    background-position: top right;
+    background-size: cover;
+    position: relative;
+  }
+  .calculation:before {
+    content: '';
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 50%;
+    background-color: #ffc000;
+    position: absolute;
+  }
+  .calculation-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .calculation-text {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    text-align: center;
+  }
+  .calculation-text__list {
+    text-align: left;
+  }
+  .calculation-form__title {
+    margin-top: 50px;
   }
 }
 
@@ -1280,6 +1317,31 @@ img {
   .section-title_center {
     padding: 25px;
     font-size: 20px;
+  }
+  .calculation__input-1 {
+    width: 300px;
+  }
+  .calculation__input-2 {
+    width: 300px;
+  }
+  .calculation__button {
+    width: 300px;
+  }
+  .calculation-text__item {
+    text-align: justify;
+  }
+  .calculation-text__list {
+    line-height: 24px;
+  }
+  .calculation-form__title {
+    font-size: 20px;
+    line-height: 24px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
+  .calculation-form__subtitle {
+    font-size: 18px;
+    line-height: 24px;
   }
   /*  border-radius: 50%*/
   /*  border: 2px solid $item-phone*/
