--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -15,7 +15,7 @@
     margin-top: 0
 
      
-@media (max-width: 992px)
+@media (max-width: 997px)
   .container 
     width: 767px     
   .main
@@ -29,9 +29,34 @@
     margin: 0 auto    
   .slider
     margin-right: -20px //20
-     // &__item
-     
+  .calculation
+    background-position: top right
+    background-size: cover 
+    position: relative
 
+    &:before
+      content: ''
+      left: 0
+      bottom: 0
+      width: 100%
+      height: 50%
+      background-color: #ffc000
+      position: absolute
+
+  .calculation-container     
+    flex-direction: column
+    justify-content: space-between   
+    align-items: center // я расположила контент по центру
+  .calculation
+    &-text 
+      width: 504px
+      order: 2   // я поменяла порядок элементов , это свойство flex   
+      text-align: center  
+      &__list
+        text-align: left 
+  .calculation-form__title 
+    margin-top: 50px    
+ 
 @media (max-width: 768px)
   .container
     width: 95%
@@ -207,11 +232,25 @@
   .section-title_center
     padding: 25px
     font-size: 20px    
-
-
-
-
-
+  .calculation__input-1
+    width: 300px
+  .calculation__input-2   
+    width: 300px
+  .calculation__button    
+    width: 300px
+  .calculation-text__item
+   text-align: justify
+  .calculation-text__list 
+    line-height: 24px
+  .calculation-form__title
+    font-size: 20px
+    line-height: 24px
+    margin-top: 30px
+    margin-bottom: 20px  
+  .calculation-form__subtitle
+    font-size: 18px
+    line-height: 24px
+    
 
 
 
