убрала стрелки на малых и средних экранах

--- a/sass/_portfolio.sass
+++ b/sass/_portfolio.sass
@@ -1,6 +1,6 @@
 .portfolio
   background-color: $light-bg-color
-  background:  url('/img/bg_slider.png') no-repeat  
+  background:  url('../img/bg_slider.png') no-repeat  
   //background-size: 60% 
   padding: 100px 0
 .slider
