--- a/css/style.css
+++ b/css/style.css
@@ -784,7 +784,7 @@ template {
 
 .portfolio {
   background-color: #f5f5f5;
-  background: url("/img/bg_slider.png") no-repeat;
+  background: url("../img/bg_slider.png") no-repeat;
   padding: 100px 0;
 }
 
