--- a/sass/_portfolio.sass
+++ b/sass/_portfolio.sass
@@ -5,7 +5,7 @@
   padding: 100px 0
 .slider
   &__item
-    margin-right: 20px //40px
+    margin: auto
     text-align: center
     img
       margin: auto
