--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -318,11 +318,13 @@
     height: 32px
   .calculation-form__phone 
     margin-bottom: 40px
-  .calculation-text__subtitle 
-    margin-top: 20px
-    margin-bottom: 30px
-  .calculation-text__item 
-    padding-left: 20px
+  .calculation-text
+    &__subtitle 
+      margin-top: 20px
+      margin-bottom: 30px
+  .calculation-text
+    &__item 
+      padding-left: 20px
   .form__item__text-1 
     margin: 10px 0 
   .calculation__button
